add tailwind in html file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 
 </head>
 <body>
-    
+    <div>
+        <nav>
+            <img src="#" alt="">
+            <ul>
+                <li><a href="#"> Home </a></li>
+                <li><a href="#"> about </a></li>
+                <li><a href="#"> features</a></li>
+                <li><a href="#"> price </a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
